@@ -93,6 +93,11 @@ Hellanzb.PROCESSED_SUBDIR = 'processed'
 # for a record of what hellanzb deletes
 Hellanzb.DELETE_PROCESSED = True
 
+# Save archives into a sub directory of DEST_DIR named after their newzbin.com
+# category (when queued using the enqueuenewzbin XMLRPC call); e.g. Apps,
+# Movies, Music
+Hellanzb.CATEGORIZE_DEST = True
+
 # Disable SMART_PAR (download all PAR files)
 #Hellanzb.SMART_PAR = False
 
